Home page created & Added header and footer

--- a/webpage.html
+++ b/webpage.html
@@ -6,6 +6,7 @@
     <title>Infinity Science Academy</title>
     <link rel="icon" href="IMAGES/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="webpagestyle.css">
+    <link rel="stylesheet" href="mainstyle.css">
 </head>
 <body>
     <header class="header" >
