--- a/webpage.html
+++ b/webpage.html
@@ -59,17 +59,28 @@
                 <button>Submit</button>
 
         </div>
-        <div class="ver" id="Contact-Section">
+        <div class="contact-table" >
             <h5>Contact Details</h5>
-            
-                <p>Address : 265, Mapakanda, Nawalapitiya</p>
-                <p>Email : <a href="mailto:infinitysciencecollege@gmail.com">infinitysciencecollege@gmail.com</a></p>
-                <p>Phone Number : <a href="tel:+94774680776">077 468 0776</a></p>
+            <table>
+                <tr>
+                    <td>Address : </td>
+                    <td>265, Mapakanda, Nawalapitiya</td>
+                </tr>
+                <tr>
+                    <td>Email : </td>
+                    <td><a href="mailto:infinitysciencecollege@gmail.com">infinitysciencecollege@gmail.com</a></td>
+                </tr>
+                <tr>
+                    <td>Phone : </td>
+                    <td><a href="tel:+94774680776">077 468 0776</a></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><a href="tel:+94774680776">074 268 0776</a></td>
+                </tr>
+            </table>   
             </div>
-           
-
         </div>
-
     </div>
     <div class="footer">
         <p>&copy; 2025 Infinity Science Academy. All rights reserved.</p>
