Modified some code in loging page

--- a/webpage.html
+++ b/webpage.html
@@ -42,7 +42,7 @@
     <hr>
     <h4>Feel free to contact us</h4>
     <h1 class="heading-aboutus">Get in touch</h1>
-    <div class="contact-us">
+    <div class="contact-us" id="Contact-Section">
 
         <div class="ver">
            
