--- a/Homepage.html
+++ b/Homepage.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mainstyle.css">
-    <link rel="stylesheet" href="Homepage.html">
-    <title>Document</title>
+    <link rel="stylesheet" href="Homepagestyle.css">
+    <link rel="icon" href="IMAGES/logo.jpg" type="image/x-icon">
+    <title>infinity science college</title>
 </head>
 <body>
     <header class="header" >
         <img src="IMAGES/logo.jpg" class="logo-image">
-        <h3 class="name">Infinity Science Academy</h3>
+        <h3 class="college-name">Infinity Science Academy</h3>
         <nav class="navbar">
             
             <ul>
-                <li><a>Home</a></li>
+                <li><a >Home</a></li>
                 <li><a >Profile</a></li>
                 <li><a >Setting</a></li>
 
