--- a/logingpage.html
+++ b/logingpage.html
@@ -26,7 +26,7 @@
         </form>
         <div class="error" id="error"></div>
         <div class="forgot-password">
-            <a href="#" id ="forgotpassword">Forgot Password?</a>
+            <a  id ="forgotpassword">Forgot Password?</a>
         </div>
         <div class="tag">
             
