changes on home pages

--- a/profile.html
+++ b/profile.html
@@ -16,19 +16,14 @@
             
             <ul>
                 <li><a href="Homepage.html">Home</a></li>
-                <li><a href="Profile/profile.html" >Profile</a></li>
+                <li><a >Profile</a></li>
                 <li><a >Setting</a></li>
 
             </ul>
         </nav>
     </header>
 
-    <div class="vertical-nav">
-        <a href="#dashboard" class="active">Dashboard</a>
-        <a href="#attendance">Attendance Records</a>
-        <a href="#reports">Reports</a>
-        <a href="#settings">Settings</a>
-    </div>
+   
 
 
     
