--- a/Homepage.html
+++ b/Homepage.html
@@ -25,9 +25,17 @@
     <section class="student-info">
         <h2>Student Dashboard</h2>
         <div class="student-details">
-            <div class="student-detail">
+            <div class="navibar">
+                <a href="#Term">Term Examinatin Marks</a>
+                <a href="#Monthly">Monthly Examinatin Marks</a>
+                <a href="#Attendance">Attendance Details</a>
+                <a href="#Payment">Payemnt Details</a>
+            </div>
+            <br />
+            <br />
+            <div class="student-detail" id="Term">
                 <h3>Term Examination Marks</h3>
-                <table>
+                <table align="center">
                     <tr>
                         <th>Subject</th>
                         <th>Date</th>
@@ -163,9 +171,9 @@
                 </table>
             </div>
 
-            <div class="student-detail">
+            <div class="student-detail" id="Monthly">
                 <h3>Monthly Examination Marks</h3>
-                <table>
+                <table align="center">
                     <tr>
                         <th>Subject</th>
                         <th>Date</th>
@@ -267,9 +275,9 @@
             </div>
 
 
-            <div class="student-detail">
+            <div class="student-detail" id="Attendance">
                 <h3>Monthly Attendance</h3>
-                <table>
+                <table align="center">
                     <tr>
                         <th>Month</th>
                         <th>Present Days</th>
@@ -365,11 +373,118 @@
             </div>
 
 
-            <div class="student-detail">
-                <h3>Payment Details</h3>
-                <p>Amount Paid: $500</p>
-                <p>Amount Due: $0</p>
+            <div class="student-detail" id="Payment">
+                <h3>Monthly Payment Details</h3>
+                <table align="center">
+                    <tr>
+                        <th>Month</th>
+                        <th>Amount Paid</th>
+                        <th>Payment Date</th>
+                        <th>Payment Status</th>
+                    </tr>
+
+                    <tr>
+                        <td>January 2024</td>
+                        <td>$500</td>
+                        <td>2024-01-05</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>February 2024</td>
+                        <td>$400</td>
+                        <td>2024-02-10</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>March 2024</td>
+                        <td>$300</td>
+                        <td>2024-03-15</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>April 2024</td>
+                        <td>$350</td>
+                        <td>2024-04-12</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>May 2024</td>
+                        <td>$450</td>
+                        <td>2024-05-05</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>June 2024</td>
+                        <td>$500</td>
+                        <td>2024-06-10</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>July 2024</td>
+                        <td>$400</td>
+                        <td>2024-07-15</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>August 2024</td>
+                        <td>$550</td>
+                        <td>2024-08-05</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>September 2024</td>
+                        <td>$450</td>
+                        <td>2024-09-10</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>October 2024</td>
+                        <td>$300</td>
+                        <td>2024-10-15</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>November 2024</td>
+                        <td>$350</td>
+                        <td>2024-11-05</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>December 2024</td>
+                        <td>$500</td>
+                        <td>2024-12-10</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>January 2025</td>
+                        <td>$400</td>
+                        <td>2025-01-05</td>
+                        <td>Paid</td>
+                    </tr>
+                    <tr>
+                        <td>February 2025</td>
+                        <td>$450</td>
+                        <td>2025-02-10</td>
+                        <td>Paid</td>
+                    </tr>
+                    
+                    <tr>
+                        <td>March 2025</td>
+                        <td>$0</td>
+                        <td>-</td>
+                        <td>No Payment</td>
+                    </tr>
+                    <tr>
+                        <td>April 2025</td>
+                        <td>$0</td>
+                        <td>-</td>
+                        <td>No Payment</td>
+
+                    </tr>
+                </table><br />
+            <p> Total due = $750</p>
             </div>
+
         </div>
     </section>
 
