--- a/Homepage.html
+++ b/Homepage.html
@@ -16,7 +16,7 @@
 
             <ul>
                 <li><a href="Homepage.html">Home</a></li>
-                <li><a >Profile</a></li>
+                <li><a href=""></a></li>
                 <li><a>Setting</a></li>
 
             </ul>
