--- a/profile.html
+++ b/profile.html
@@ -6,30 +6,46 @@
     <link rel="stylesheet" href="mainstyle.css">
     <link rel="stylesheet" href="profile.css">
     <link rel="icon" href="IMAGES/logo.jpg" type="image/x-icon">
-    <title>infinity science college</title>
+    <title>Infinity Science Academy - Profile</title>
 </head>
 <body>
     <header class="header">
         <img src="IMAGES/logo.jpg" class="logo-image" />
         <h3 class="college-name">Infinity Science Academy</h3>
         <nav class="navbar">
-
             <ul>
                 <li><a href="Homepage.html">Home</a></li>
-                <li><a>Profile</a></li>
-                <li><a>Setting</a></li>
-
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="Setting.html">Setting</a></li>
             </ul>
         </nav>
     </header>
 
-    <div class="footer">
-        <p>&copy; 2025 Infinity Science Academy. All rights reserved.</p>
+    <div class="student-details">
+        <h2>Student Profile</h2>
 
+        
+        <div class="profile-image-container">
+            <img src="IMAGES/Profile.jpeg"  alt="Student Photo" class="profile-image" />
+        </div>
+
+        
+        <div class="details-card">
+            <p><strong>Name:</strong> John Doe</p>
+            <p><strong>Father's Name:</strong> Mr. Richard Doe</p>
+            <p><strong>Address:</strong> 15/A, Main Street, Galle</p>
+            <p><strong>Email:</strong> johndoe@gmail.com</p>
+            <p><strong>Phone Number:</strong> +949 156 7890</p>
+            <p><strong>Stream:</strong>Physical Science</p>
+            <p><strong>Batch:</strong> 2025 Proper</p>
+            <p><strong>Date of Birth:</strong> January 15, 2007</p>
+            <p><strong>Gender:</strong> Male</p>
+            <p><strong>Guardian's Contact:</strong> +949 654 3210</p>
+        </div>
     </div>
 
-
-
-
+    <div class="footer">
+        <p>&copy; 2025 Infinity Science Academy. All rights reserved.</p>
+    </div>
 </body>
 </html>
