--- a/Homepage.html
+++ b/Homepage.html
@@ -16,8 +16,8 @@
 
             <ul>
                 <li><a href="Homepage.html">Home</a></li>
-                <li><a href=""></a></li>
-                <li><a>Setting</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="Setting.html">Setting</a></li>
 
             </ul>
         </nav>
