chnges on web page

--- a/Homepage.html
+++ b/Homepage.html
@@ -13,12 +13,11 @@
         <img src="IMAGES/logo.jpg" class="logo-image" />
         <h3 class="college-name">Infinity Science Academy</h3>
         <nav class="navbar">
-
             <ul>
                 <li><a href="Homepage.html">Home</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="Setting.html">Setting</a></li>
-
+                <li><button class="logout_btn" onclick="confirmLogout()">Logout</button></li>
             </ul>
         </nav>
     </header>
@@ -497,6 +496,7 @@
         <p>&copy; 2025 Infinity Science Academy. All rights reserved.</p>
 
     </div>
+    <script src="homepage.js"></script>
 
 
 
