--- a/Setting.html
+++ b/Setting.html
@@ -17,6 +17,7 @@
                 <li><a href="Homepage.html">Home</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="Setting.html">Setting</a></li>
+                <li><button class="logout_btn" onclick="confirmLogout()">Logout</button></li>
             </ul>
         </nav>
     </header>
@@ -48,5 +49,6 @@
     <div class="footer">
         <p><centre>&copy; 2025 Infinity Science Academy. All rights reserved.</centre></p>
     </div>
+    <script src="homepage.js"></script>
 </body>
 </html>
