--- a/profile.html
+++ b/profile.html
@@ -17,6 +17,7 @@
                 <li><a href="Homepage.html">Home</a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="Setting.html">Setting</a></li>
+                <li><button class="logout_btn" onclick="confirmLogout()">Logout</button></li>
             </ul>
         </nav>
     </header>
@@ -47,5 +48,6 @@
     <div class="footer">
         <p>&copy; 2025 Infinity Science Academy. All rights reserved.</p>
     </div>
+    <script src="homepage.js"></script>
 </body>
 </html>
